crates/oxc_react_compiler/tests/snapshots/type-provider-tagged-template-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-provider-tagged-template-expression.js
---
import { c as _c } from "react/compiler-runtime";
import { tag } from "ReactCompilerPureTagTest";
export function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = tag`value`;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
