crates/oxc_react_compiler/tests/snapshots/type-test-field-load-binary-op.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-test-field-load-binary-op.js
---
import { c as _c } from "react/compiler-runtime";
function component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = {
			u: makeSomePrimitive(),
			v: makeSomePrimitive()
		};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const x = t0;
	const u = x.u;
	const v = x.v;
	if (u > v) {}
	const z = x.v;
	return z;
}
