crates/oxc_react_compiler/tests/snapshots/type-test-field-store.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-test-field-store.js
---
import { c as _c } from "react/compiler-runtime";
function component() {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		x = {};
		const q = {};
		x.t = q;
		$[0] = x;
	} else {
		x = $[0];
	}
	const z = x.t;
	return z;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: [],
	isComponent: false
};
