crates/oxc_react_compiler/tests/snapshots/type-test-polymorphic.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-test-polymorphic.js
---
import { c as _c } from "react/compiler-runtime";
function component() {
	const $ = _c(2);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = makePrimitive();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const p = t0;
	let x;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		const o = {};
		x = {};
		x.t = p;
		x.t = o;
		$[1] = x;
	} else {
		x = $[1];
	}
	const y = x.t;
	return y;
}
