crates/oxc_react_compiler/tests/snapshots/type-test-primitive.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-test-primitive.js
---
function component() {
	return 2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: [],
	isComponent: false
};
