crates/oxc_react_compiler/tests/snapshots/type-test-return-type-inference.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/type-test-return-type-inference.js
---
import { c as _c } from "react/compiler-runtime";
function component() {
	const $ = _c(1);
	const x = foo();
	const y = foo();
	if (x > y) {}
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = foo();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const z_0 = t0;
	return z_0;
}
