crates/oxc_react_compiler/tests/snapshots/typescript-assignment-targets.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/typescript-assignment-targets.ts
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(3);
	let obj;
	let t0;
	if ($[0] !== props.value) {
		let local = 0;
		obj = { x: props.value };
		const read = () => local;
		local = obj.x;
		local = obj.x;
		local = local + 1;
		local = local + 1;
		obj.x = local;
		obj.x = local;
		obj.x = local;
		obj.x = local;
		getObject()[getKey()] = getValue();
		local = local + 1;
		local = local - 1;
		local = local * 2;
		obj.x = obj.x + local;
		obj.x = obj.x - local;
		obj.x = obj.x * local;
		obj.x = obj.x + 1;
		t0 = read();
		$[0] = props.value;
		$[1] = obj;
		$[2] = t0;
	} else {
		obj = $[1];
		t0 = $[2];
	}
	return t0 + obj.x + 1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 0 }]
};
