crates/oxc_react_compiler/tests/snapshots/typescript-captured-update-target.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/typescript-captured-update-target.ts
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let value = 0;
		const read = () => value;
		value++;
		t0 = read();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
